# smart-boutique-pos

./: .env.example  .gitignore  Modelo_Fisico.sql  README.md  cargar_datos.py  main.py  pyproject.toml  replace.py  seed_db.py  test_actores.py  test_analitica.py  test_catalogo.py  test_connection.py  test_pos.py  test_suministro.py
api/: dependencies.py  main_api.py
api/routers/: actores.py  compras.py  dashboard.py  inventario.py  pos.py
api/schemas/: __init__.py  actores.py  compras.py  inventario.py  pos.py
config/: db.py  settings.py
controllers/: actores_controller.py  compras_controller.py  dashboard_controller.py  inventario_controller.py  main_controller.py  pos_controller.py
data/: Modelo_Fisico.sql  TIENDA_ROPA_FINAL.xlsx
models/: __init__.py  actores.py  base.py  catalogo.py  pos.py  suministro.py  usuarios.py
scripts/: cargar_datos.py  seed_db.py
services/: actores.py  analitica.py  asistente.py  compras.py  inventario.py  mineria.py  pos.py  prediccion.py
static/js/: actores.js  api_client.js  compras.js  core.js  dashboard.js  inventario.js  pos.js  utils.js
templates/: actores.html  base.html  compras.html  dashboard.html  inventario.html  pos.html
tests/: __init__.py  test_actores.py  test_analitica.py  test_catalogo.py  test_connection.py  test_mineria.py  test_pos.py  test_prediccion.py  test_suministro.py
ui/: main_window.py
ui/views/: pos_view.py
utils/: signals.py  ui_helpers.py
views/: __init__.py  actores_view.py  compras_view.py  dashboard_view.py  inventario_view.py  main_window.py  notification_toast.py  pos_view.py
(+2 files in other folders)
