[project]
name = "smart-boutique-pos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "customtkinter>=6.0.0",
    "matplotlib>=3.11.0",
    "pymysql>=1.2.0",
    "pyside6>=6.11.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
