[project]
name = "smart-boutique-pos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "jinja2>=3.1.6",
    "matplotlib>=3.11.0",
    "mysql-connector-python>=9.7.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
